--- a/frontend/sustain4ward/src/Pages/Card.css
+++ b/frontend/sustain4ward/src/Pages/Card.css
@@ -5,7 +5,7 @@
 	border-radius: 1rem;
 	text-align: center;
 	margin: 2rem;
-	padding: 4rem;
+	padding: 1rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -13,8 +13,8 @@
 }
 
 img {
-	width: 10rem;
-	height: 10rem;
+	width: 15rem;
+	height: 15rem;
 	object-fit: cover;
 	object-position: center;
 }
@@ -28,6 +28,7 @@ img {
 #visit {
 	color: white;
 	padding: 3rem;
+	font-size: 1rem;
 }
 
 .truncate {
@@ -39,8 +40,12 @@ img {
 }
 
 progress {
-	background: green;
+	/* background: blue; */
+	border-radius: 1rem;
 }
 p {
-	font-size: 1rem;
+	font-size: 3rem;
+}
+a{
+	text-decoration: none;
 }
